trunk/Archive2/80/42d7d50d39e92f/output
main.cpp:7:17: error: no member named 'make_unique' in namespace 'std'
    return std::make_unique<int>(42);
           ~~~~~^
main.cpp:7:32: error: expected '(' for function-style cast or type construction
    return std::make_unique<int>(42);
                            ~~~^
2 errors generated.
